Update notebooks to latest API changes
The changes being: 'real' and 'integer' -> 'numeric' and no id
attribute of anything anymore.

--- a/docs/examples/DataSet/Pedestrian example of subscribing to a DataSet.ipynb
+++ b/docs/examples/DataSet/Pedestrian example of subscribing to a DataSet.ipynb
@@ -68,7 +68,8 @@
    },
    "outputs": [],
    "source": [
-    "dataSet = new_data_set(\"test\", specs=[ParamSpec(\"x\", \"real\", unit='Hz'), ParamSpec(\"y\", \"real\", unit='V')])"
+    "dataSet = new_data_set(\"test\", specs=[ParamSpec(\"x\", \"numeric\", unit='Hz'),\n",
+    "                                      ParamSpec(\"y\", \"numeric\", unit='V')])"
    ]
   },
   {
@@ -111,11 +112,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "At step 25: The voltage exceeded the limit 5 times! \n",
-      "At step 51: The voltage exceeded the limit 5 times! \n",
-      "At step 74: The voltage exceeded the limit 5 times! \n",
-      "At step 106: The voltage exceeded the limit 5 times! \n",
-      "At step 128: The voltage exceeded the limit 5 times! \n"
+      "At step 30: The voltage exceeded the limit 5 times! \n",
+      "At step 64: The voltage exceeded the limit 5 times! \n",
+      "At step 85: The voltage exceeded the limit 5 times! \n",
+      "At step 107: The voltage exceeded the limit 5 times! \n",
+      "At step 123: The voltage exceeded the limit 5 times! \n"
      ]
     }
    ],
@@ -151,7 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSet = new_data_set(\"test\", specs=[ParamSpec(\"blip\", \"real\", unit='bit'), ParamSpec(\"blop\", \"real\", unit='bit')])"
+    "dataSet = new_data_set(\"test\", specs=[ParamSpec(\"blip\", \"numeric\", unit='bit'),\n",
+    "                                      ParamSpec(\"blop\", \"numeric\", unit='bit')])"
    ]
   },
   {
@@ -200,105 +202,104 @@
      "output_type": "stream",
      "text": [
       "...............O................\n",
-      ".................O..............\n",
-      ".................O..............\n",
-      "....................O...........\n",
-      "....................O...........\n",
+      "................O...............\n",
+      "...................O............\n",
+      "...................O............\n",
+      ".....................O..........\n",
       "......................O.........\n",
       "......................O.........\n",
-      "........................O.......\n",
-      "........................O.......\n",
+      ".......................O........\n",
       ".........................O......\n",
       "...........................O....\n",
       "............................O...\n",
       "...........................O....\n",
-      "...........................O....\n",
+      "............................O...\n",
+      "............................O...\n",
+      "............................O...\n",
+      "............................O...\n",
+      "............................O...\n",
+      "............................O...\n",
+      "............................O...\n",
       ".............................O..\n",
-      ".............................O..\n",
-      ".............................O..\n",
-      ".............................O..\n",
-      "..............................O.\n",
       ".............................O..\n",
       "............................O...\n",
-      "...........................O....\n",
-      ".............................O..\n",
-      "...........................O....\n",
-      "...........................O....\n",
-      ".......................O........\n",
-      ".......................O........\n",
-      ".......................O........\n",
+      "............................O...\n",
+      "..........................O.....\n",
+      ".........................O......\n",
+      ".........................O......\n",
+      ".........................O......\n",
+      "......................O.........\n",
       ".....................O..........\n",
       "....................O...........\n",
-      "....................O...........\n",
+      "..................O.............\n",
+      "..................O.............\n",
       ".................O..............\n",
-      ".................O..............\n",
-      "..............O.................\n",
+      "...............O................\n",
       ".............O..................\n",
       "............O...................\n",
-      "............O...................\n",
-      "............O...................\n",
+      "..........O.....................\n",
       ".........O......................\n",
       "........O.......................\n",
+      ".........O......................\n",
+      ".....O..........................\n",
       "......O.........................\n",
       ".....O..........................\n",
-      ".....O..........................\n",
-      ".....O..........................\n",
-      "...O............................\n",
+      "....O...........................\n",
       "...O............................\n",
       "..O.............................\n",
       "..O.............................\n",
-      "O...............................\n",
       ".O..............................\n",
-      ".O..............................\n",
+      "..O.............................\n",
       "..O.............................\n",
       "O...............................\n",
       "..O.............................\n",
       "..O.............................\n",
       "..O.............................\n",
+      "....O...........................\n",
+      "...O............................\n",
       "...O............................\n",
       "....O...........................\n",
+      "......O.........................\n",
       ".....O..........................\n",
-      ".......O........................\n",
+      "......O.........................\n",
       "........O.......................\n",
-      ".......O........................\n",
-      "..........O.....................\n",
-      "...........O....................\n",
+      ".........O......................\n",
       "............O...................\n",
-      "............O...................\n",
+      ".............O..................\n",
+      "..............O.................\n",
       "...............O................\n",
       "................O...............\n",
-      "................O...............\n",
-      "...................O............\n",
+      ".................O..............\n",
+      "....................O...........\n",
       ".....................O..........\n",
       ".....................O..........\n",
       ".......................O........\n",
-      ".......................O........\n",
+      "......................O.........\n",
+      "........................O.......\n",
       "........................O.......\n",
       "..........................O.....\n",
       "...........................O....\n",
-      "............................O...\n",
-      "............................O...\n",
-      "............................O...\n",
-      "............................O...\n",
+      "..........................O.....\n",
       ".............................O..\n",
+      ".............................O..\n",
+      "............................O...\n",
       "..............................O.\n",
       ".............................O..\n",
-      "............................O...\n",
-      "............................O...\n",
-      "............................O...\n",
+      "..............................O.\n",
       "...........................O....\n",
-      "...........................O....\n",
-      "...........................O....\n",
+      "............................O...\n",
+      ".............................O..\n",
+      "..........................O.....\n",
+      "..........................O.....\n",
       ".........................O......\n",
       ".........................O......\n",
-      ".......................O........\n",
-      ".......................O........\n",
+      "........................O.......\n",
+      "......................O.........\n",
       ".....................O..........\n",
-      "...................O............\n",
       "....................O...........\n",
       "..................O.............\n",
-      "................O...............\n",
-      "...............O................\n"
+      ".................O..............\n",
+      ".................O..............\n"
      ]
     }
    ],
