--- a/docs/examples/DataSet/Benchmarking.ipynb
+++ b/docs/examples/DataSet/Benchmarking.ipynb
@@ -16,8 +16,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jhn/src/Qcodes/qcodes/instrument/parameter.py:1315: UserWarning: Parameter single: `ManualParameter` is deprecated, use `Parameter` instead with `set_cmd=None`.\n",
-      "  '`Parameter` instead with `set_cmd=None`.'.format(self))\n"
+      "/Users/jhn/.pyenv/versions/3.6.4/envs/qcodes-3.6.4/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "benchmarking#the sample is a lie#32@./experiments.db\n",
+       "benchmarking#the sample is a lie#11@./experiments.db\n",
        "----------------------------------------------------"
       ]
      },
@@ -97,9 +97,9 @@
     {
      "data": {
       "text/plain": [
-       "benchmarking#the sample is a lie#32@./experiments.db\n",
+       "benchmarking#the sample is a lie#11@./experiments.db\n",
        "----------------------------------------------------\n",
-       "125-benchmark_data-1-None-0"
+       "120-benchmark_data-1-None-0"
       ]
      },
      "execution_count": 4,
@@ -138,19 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16.7 ms ± 715 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "CPU times: user 30.2 ms, sys: 6.67 ms, total: 36.9 ms\n",
+      "Wall time: 36.3 ms\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%time\n",
     "for x in range(x_shape):\n",
     "    for y in range(y_shape):\n",
     "        z = np.random.random_sample(1)"
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,19 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.31 ms ± 137 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "CPU times: user 16.1 ms, sys: 2.91 ms, total: 19 ms\n",
+      "Wall time: 17.1 ms\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%time\n",
     "for x in range(x_shape):\n",
     "    for y in range(y_shape):\n",
     "        x_data[x,y] = x\n",
@@ -205,32 +207,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "double_dataset = new_data_set(\"doubledata\", specs=[ParamSpec(\"x\", \"number\"),\n",
-    "                                                   ParamSpec(\"y\", \"number\"),\n",
-    "                                                   ParamSpec('z', \"number\")])"
+    "double_dataset = new_data_set(\"doubledata\", specs=[ParamSpec(\"x\", \"numeric\"),\n",
+    "                                                   ParamSpec(\"y\", \"numeric\"),\n",
+    "                                                   ParamSpec('z', \"numeric\")])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is so slow that we are only doing a 10th of the computation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.75 s, sys: 8.2 s, total: 9.95 s\n",
-      "Wall time: 13.5 s\n"
+      "CPU times: user 1.61 s, sys: 1.29 s, total: 2.9 s\n",
+      "Wall time: 3.36 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for x in range(x_shape):\n",
+    "for x in range(x_shape//10):\n",
     "    for y in range(y_shape):\n",
     "        double_dataset.add_result({\"x\": x, 'y': y, 'z': np.random.random_sample()})"
    ]
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,19 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "233 ms ± 4.58 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "CPU times: user 257 ms, sys: 147 ms, total: 404 ms\n",
+      "Wall time: 463 ms\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%time\n",
     "for x in range(x_shape):\n",
     "    for y in range(y_shape):\n",
     "        x_data[y] = x\n",
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,19 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25.8 ms ± 1.71 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "CPU times: user 39.3 ms, sys: 9.85 ms, total: 49.2 ms\n",
+      "Wall time: 44.9 ms\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%time\n",
     "for x in range(x_shape):\n",
     "    for y in range(y_shape):\n",
     "        x_data[x,y] = x\n",
@@ -432,9 +443,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "many_Data = new_data_set(\"many_data\", specs=[ParamSpec(\"x\", \"number\"),\n",
-    "                                             ParamSpec(\"y\", \"number\"),\n",
-    "                                             ParamSpec(\"z\", \"number\")])"
+    "many_Data = new_data_set(\"many_data\", specs=[ParamSpec(\"x\", \"numeric\"),\n",
+    "                                             ParamSpec(\"y\", \"numeric\"),\n",
+    "                                             ParamSpec(\"z\", \"numeric\")])"
    ]
   },
   {
