--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\a-sochat\\AppData\\Local\\Continuum\\Anaconda3\\envs\\qcodes\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import sys \n",
     "sys.path.append(r\"C:\\Users\\a-sochat\\development\\Qcodes_Sohail_Clone\\Qcodes\")\n",
@@ -17,139 +26,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# We will first make a print function which conviniently prints the output of our sweep objects. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pretty_print(dictionary): \n",
-    "    \n",
-    "    s = \"\"\n",
-    "    independents = []\n",
-    "    seperator = \"\"\n",
-    "    \n",
-    "    names = list(dictionary.keys())[::-1]\n",
-    "    \n",
-    "    for name in names: \n",
-    "        value = str(dictionary[name][\"value\"])\n",
+    "class Printer:\n",
+    "    def __init__(self, sweep_object): \n",
+    "        self._table = sweep_object.parameter_table\n",
+    "        self._table_list = self._table.table_list\n",
     "        \n",
-    "        if dictionary[name][\"independent_parameter\"]: \n",
-    "            s += seperator + name + value\n",
-    "            independents.append(name + value)\n",
-    "        else: \n",
-    "            s += seperator + name + \"({}) = {}\".format(\",\".join(independents), value) \n",
-    "        \n",
-    "        seperator = \", \"\n",
+    "    def __enter__(self): \n",
+    "        print(self._table)\n",
+    "        return self\n",
     "    \n",
-    "    print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x3.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# At each iteration a sweep object will return a dictionary in the form...\n",
+    "    def __exit__(self, type, value, traceback): \n",
+    "        pass\n",
     "\n",
-    "d = {\"x\": {\"unit\": \"\", \"value\": 3.4, \"independent_parameter\": True}}\n",
-    "pretty_print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "independent parameters will be printed as \"name value\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x() = 3.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = {\"x\": {\"unit\": \"\", \"value\": 3.4, \"independent_parameter\": False}}\n",
-    "pretty_print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "dependent parameters will be printed as name() = value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x3.4, y(x3.4) = 1.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = {\n",
-    "    \"y\": {\"unit\": \"\", \"value\": 1.2, \"independent_parameter\": False}, \n",
-    "    \"x\": {\"unit\": \"\", \"value\": 3.4, \"independent_parameter\": True}\n",
-    "}\n",
-    "pretty_print(d)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The independent parameter x has value 3.4. The dependent parameter y is evaluated for x = 3.4 and has value 1.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x3.4, y1.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = {\n",
-    "    \"y\": {\"unit\": \"\", \"value\": 1.2, \"independent_parameter\": True}, \n",
-    "    \"x\": {\"unit\": \"\", \"value\": 3.4, \"independent_parameter\": True}\n",
-    "}\n",
-    "pretty_print(d)"
+    "    def __call__(self, result):\n",
+    "        p = [i[0] for i in self._table_list[0][\"independent_parameters\"]]\n",
+    "        p += [i[0] for i in self._table_list[0][\"dependent_parameters\"]]\n",
+    "        print(\" \" + \"\\t \".join(list([str(result[ip]) for ip in p])))"
    ]
   },
   {
@@ -161,56 +58,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = ManualParameter(\"x\")"
+    "x = ManualParameter(\"x\", unit=\"V\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'x': {'unit': '', 'value': 0, 'independent_parameter': True}}\n",
-      "{'x': {'unit': '', 'value': 1, 'independent_parameter': True}}\n"
+      "x [V]\n",
+      " 0\n",
+      " 1\n"
      ]
     }
    ],
    "source": [
-    "for i in ParameterSweep(x, lambda: [0, 1]): \n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets use pretty print to make the results more readable "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x0\n",
-      "x1\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in ParameterSweep(x, lambda: [0, 1]): \n",
-    "    pretty_print(i)"
+    "sweep_object = ParameterSweep(x, lambda: [0, 1])\n",
+    "\n",
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -229,42 +104,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = ManualParameter(\"y\")"
+    "y = ManualParameter(\"y\", unit=\"V\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1])\n",
-    "soy = ParameterSweep(y, lambda: [0, 1])"
+    "soy = ParameterSweep(y, lambda: [0, 1])\n",
+    "sweep_object = Nest([soy, sox])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, x0\n",
-      "y0, x1\n",
-      "y1, x0\n",
-      "y1, x1\n"
+      "y [V]\tx [V]\n",
+      " 0\t 0\n",
+      " 0\t 1\n",
+      " 1\t 0\n",
+      " 1\t 1\n"
      ]
     }
    ],
    "source": [
-    "for i in Nest([soy, sox]):  # X is the inner axis : \n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object:  # X is the inner axis : \n",
+    "        printer(i)"
    ]
   },
   {
@@ -283,47 +161,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = ManualParameter(\"z\")"
+    "z = ManualParameter(\"z\", unit=\"V\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1])\n",
     "soy = ParameterSweep(y, lambda: [0, 1])\n",
-    "soz = ParameterSweep(z, lambda: [0, 1])"
+    "soz = ParameterSweep(z, lambda: [0, 1])\n",
+    "sweep_object = Nest([soz, soy, sox])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z0, y0, x0\n",
-      "z0, y0, x1\n",
-      "z0, y1, x0\n",
-      "z0, y1, x1\n",
-      "z1, y0, x0\n",
-      "z1, y0, x1\n",
-      "z1, y1, x0\n",
-      "z1, y1, x1\n"
+      "z [V]\ty [V]\tx [V]\n",
+      " 0\t 0\t 0\n",
+      " 0\t 0\t 1\n",
+      " 0\t 1\t 0\n",
+      " 0\t 1\t 1\n",
+      " 1\t 0\t 0\n",
+      " 1\t 0\t 1\n",
+      " 1\t 1\t 0\n",
+      " 1\t 1\t 1\n"
      ]
     }
    ],
    "source": [
-    "for i in Nest([soz, soy, sox]): \n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -342,33 +223,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = ManualParameter(\"m\")\n",
+    "m = ManualParameter(\"m\", unit=\"A\")\n",
     "m.get = lambda: x() ** 2 + y()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m() = 10\n"
+      "m [A]\n",
+      " 10\n"
      ]
     }
    ],
    "source": [
     "x(3)\n",
     "y(1)\n",
+    "sweep_object = ParameterWrapper(m)\n",
     "\n",
-    "for i in ParameterWrapper(m): \n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_obejct: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -380,41 +264,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sox = ParameterSweep(x, lambda: [0, 1])\n",
-    "soy = ParameterSweep(y, lambda: [0, 1])\n",
-    "measurement = ParameterWrapper(m)"
+    "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
+    "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
+    "measurement = ParameterWrapper(m)\n",
+    "sweep_object =  Nest([soy, sox, measurement])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, x0, m(y0,x0) = 0\n",
-      "y0, x1, m(y0,x1) = 1\n",
-      "y1, x0, m(y1,x0) = 1\n",
-      "y1, x1, m(y1,x1) = 2\n"
+      "y [V]\tx [V] | m [A]\n",
+      " 0\t 0\t 0\n",
+      " 0\t 1\t 1\n",
+      " 0\t 2\t 4\n",
+      " 1\t 0\t 1\n",
+      " 1\t 1\t 2\n",
+      " 1\t 2\t 5\n",
+      " 3\t 0\t 3\n",
+      " 3\t 1\t 4\n",
+      " 3\t 2\t 7\n",
+      " 4\t 0\t 4\n",
+      " 4\t 1\t 5\n",
+      " 4\t 2\t 8\n"
      ]
     }
    ],
    "source": [
-    "for i in  Nest([soy, sox, measurement]): # Perform a measurement at every (x, y): \n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in  sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The meaning of \"m(x0, y0)\": We measure \"m\" at (x0, y0). We have thus a 2x2 coordinate layout and the thrid dimension represents a measurement "
+    "We see a seperator \"|\" before \"m\" in the header. This means that \"m\" is a dependent parameter, depending on both \"x\" and \"y\". In fact, everything after the \"|\" seperator is a dependent parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = ManualParameter(\"n\", unit=\"A\")\n",
+    "n.get = lambda: x() - y() ** 2 + 16\n",
+    "\n",
+    "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
+    "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
+    "meas1 = ParameterWrapper(m)\n",
+    "meas2 = ParameterWrapper(n)\n",
+    "sweep_object =  Nest([soy, sox, meas1, meas2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V]\tx [V] | m [A]\tn [A]\n",
+      " 0\t 0\t 0\t 16\n",
+      " 0\t 1\t 1\t 17\n",
+      " 0\t 2\t 4\t 18\n",
+      " 1\t 0\t 1\t 15\n",
+      " 1\t 1\t 2\t 16\n",
+      " 1\t 2\t 5\t 17\n",
+      " 3\t 0\t 3\t 7\n",
+      " 3\t 1\t 4\t 8\n",
+      " 3\t 2\t 7\t 9\n",
+      " 4\t 0\t 4\t 0\n",
+      " 4\t 1\t 5\t 1\n",
+      " 4\t 2\t 8\t 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in  sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
