1) bug fix in the setter decorator 2) nearly finished the basic examples notebook

--- a/docs/examples/sweep/sweep_basic_example.ipynb
+++ b/docs/examples/sweep/sweep_basic_example.ipynb
@@ -22,31 +22,42 @@
     "\n",
     "import qcodes as qc\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
-    "from qcodes.sweep.sweep import Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper"
+    "from qcodes.sweep.sweep import (\n",
+    "    Nest, Zip, Chain, ParameterSweep, ParameterWrapper, FunctionSweep, FunctionWrapper, measurement, setter\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Printer:\n",
     "    def __init__(self, sweep_object): \n",
-    "        self._table = sweep_object.parameter_table\n",
-    "        self._table_list = self._table.table_list\n",
+    "        self._table_list = sweep_object.parameter_table.table_list\n",
+    "        \n",
+    "        self._ind = set([tpl for d in self._table_list for tpl in d[\"independent_parameters\"]])\n",
+    "        self._dep = set([tpl for d in self._table_list for tpl in d[\"dependent_parameters\"]])\n",
+    "        \n",
+    "        ind_names = list(zip(*self._ind))[0] if len(self._ind) else []\n",
+    "        dep_names = list(zip(*self._dep))[0] if len(self._dep) else []\n",
+    "        \n",
+    "        self._all_param_names = np.append(ind_names, dep_names)\n",
     "        \n",
     "    def __enter__(self): \n",
-    "        print(self._table)\n",
+    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind])\n",
+    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep])\n",
+    "        sep = \" | \"\n",
+    "        print((header_ind + sep + header_dep).strip(sep))\n",
+    "        \n",
     "        return self\n",
     "    \n",
     "    def __exit__(self, type, value, traceback): \n",
     "        pass\n",
     "\n",
     "    def __call__(self, result):\n",
-    "        p = [i[0] for i in self._table_list[0][\"independent_parameters\"]]\n",
-    "        p += [i[0] for i in self._table_list[0][\"dependent_parameters\"]]\n",
-    "        print(\" \" + \"\\t \".join(list([str(result[ip]) for ip in p])))"
+    "        print(\" \" + \"\\t \".join(list([str(result.get(ip, \"None\")) for ip in self._all_param_names])))"
    ]
   },
   {
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +262,7 @@
     "sweep_object = ParameterWrapper(m)\n",
     "\n",
     "with Printer(sweep_object) as printer:\n",
-    "    for i in sweep_obejct: \n",
+    "    for i in sweep_object: \n",
     "        printer(i)"
    ]
   },
@@ -264,19 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
     "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
-    "measurement = ParameterWrapper(m)\n",
-    "sweep_object =  Nest([soy, sox, measurement])"
+    "meas = ParameterWrapper(m)\n",
+    "sweep_object =  Nest([soy, sox, meas])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,26 +341,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y [V]\tx [V] | m [A]\tn [A]\n",
-      " 0\t 0\t 0\t 16\n",
-      " 0\t 1\t 1\t 17\n",
-      " 0\t 2\t 4\t 18\n",
-      " 1\t 0\t 1\t 15\n",
-      " 1\t 1\t 2\t 16\n",
-      " 1\t 2\t 5\t 17\n",
-      " 3\t 0\t 3\t 7\n",
-      " 3\t 1\t 4\t 8\n",
-      " 3\t 2\t 7\t 9\n",
-      " 4\t 0\t 4\t 0\n",
-      " 4\t 1\t 5\t 1\n",
-      " 4\t 2\t 8\t 2\n"
+      "y [V]\tx [V] | n [A]\tm [A]\n",
+      " 0\t 0\t 16\t 0\n",
+      " 0\t 1\t 17\t 1\n",
+      " 0\t 2\t 18\t 4\n",
+      " 1\t 0\t 15\t 1\n",
+      " 1\t 1\t 16\t 2\n",
+      " 1\t 2\t 17\t 5\n",
+      " 3\t 0\t 7\t 3\n",
+      " 3\t 1\t 8\t 4\n",
+      " 3\t 2\t 9\t 7\n",
+      " 4\t 0\t 0\t 4\n",
+      " 4\t 1\t 1\t 5\n",
+      " 4\t 2\t 2\t 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in  sweep_object: \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = ManualParameter(\"n\", unit=\"A\")\n",
+    "n.get = lambda: x() - y() ** 2 + 16\n",
+    "\n",
+    "sox = ParameterSweep(x, lambda: [0, 1, 2])\n",
+    "soy = ParameterSweep(y, lambda: [0, 1, 3, 4])\n",
+    "meas1 = ParameterWrapper(m)\n",
+    "meas2 = ParameterWrapper(n)\n",
+    "sweep_object =  Nest([soy, sox, Chain([meas1, meas2])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y [V]\tx [V] | n [A]\tm [A]\n",
+      " 0\t 0\t None\t 0\n",
+      " 0\t 0\t 16\t None\n",
+      " 0\t 1\t None\t 1\n",
+      " 0\t 1\t 17\t None\n",
+      " 0\t 2\t None\t 4\n",
+      " 0\t 2\t 18\t None\n",
+      " 1\t 0\t None\t 1\n",
+      " 1\t 0\t 15\t None\n",
+      " 1\t 1\t None\t 2\n",
+      " 1\t 1\t 16\t None\n",
+      " 1\t 2\t None\t 5\n",
+      " 1\t 2\t 17\t None\n",
+      " 3\t 0\t None\t 3\n",
+      " 3\t 0\t 7\t None\n",
+      " 3\t 1\t None\t 4\n",
+      " 3\t 1\t 8\t None\n",
+      " 3\t 2\t None\t 7\n",
+      " 3\t 2\t 9\t None\n",
+      " 4\t 0\t None\t 4\n",
+      " 4\t 0\t 0\t None\n",
+      " 4\t 1\t None\t 5\n",
+      " 4\t 1\t 1\t None\n",
+      " 4\t 2\t None\t 8\n",
+      " 4\t 2\t 2\t None\n"
      ]
     }
    ],
@@ -363,119 +433,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What happens if we nest a sweep in a measurement?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y0, m(y0) = 16, x0\n",
-      "y0, m(y0) = 16, x1\n",
-      "y1, m(y1) = 2, x0\n",
-      "y1, m(y1) = 2, x1\n"
-     ]
-    }
-   ],
-   "source": [
-    "x(4)\n",
-    "\n",
-    "for i in Nest([soy, measurement, sox]): # Notice how \"sox\" is the inner axis\n",
-    "    pretty_print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is equivalent to: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 16 0\n",
-      "0 16 1\n",
-      "1 2 0\n",
-      "1 2 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 4\n",
-    "for y in [0, 1]: \n",
-    "    m=x**2 + y\n",
-    "    for x in [0, 1]:\n",
-    "        print(y, m, x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Introducing chaining"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = ManualParameter(\"x\")\n",
-    "y = ManualParameter(\"y\")\n",
-    "\n",
-    "m = ManualParameter(\"m\")\n",
-    "m.get = lambda: y() ** 3 - 0.1\n",
-    "mm = ParameterWrapper(m)\n",
-    "\n",
-    "n = ManualParameter(\"n\")\n",
-    "n.get = lambda: x() ** 2 + 2 * y() + 0.2\n",
-    "nn = ParameterWrapper(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sox = ParameterSweep(x, lambda: [0, 1])\n",
-    "soy = ParameterSweep(y, lambda: [0, 1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, m(y0) = -0.1\n",
-      "y0, x0, n(y0,x0) = 0.2\n",
-      "y0, x1, n(y0,x1) = 1.2\n",
-      "y1, m(y1) = 0.9\n",
-      "y1, x0, n(y1,x0) = 2.2\n",
-      "y1, x1, n(y1,x1) = 3.2\n"
+      "y [V]\tx [V] | n [A]\tm [A]\n",
+      " 0\t None\t None\t 16\n",
+      " 0\t 0\t 16\t None\n",
+      " 0\t 1\t 17\t None\n",
+      " 0\t 2\t 18\t None\n",
+      " 1\t None\t None\t 5\n",
+      " 1\t 0\t 15\t None\n",
+      " 1\t 1\t 16\t None\n",
+      " 1\t 2\t 17\t None\n",
+      " 3\t None\t None\t 7\n",
+      " 3\t 0\t 7\t None\n",
+      " 3\t 1\t 8\t None\n",
+      " 3\t 2\t 9\t None\n",
+      " 4\t None\t None\t 8\n",
+      " 4\t 0\t 0\t None\n",
+      " 4\t 1\t 1\t None\n",
+      " 4\t 2\t 2\t None\n"
      ]
     }
    ],
    "source": [
-    "for i in Nest([soy, Chain([mm, Nest([sox, nn])])]):  # = y * (m + x * n) = ym + yxn: \n",
-    "    pretty_print(i)"
+    "x(4)\n",
+    "sweep_object = Nest([\n",
+    "    soy, \n",
+    "    Chain([\n",
+    "        meas1, \n",
+    "        Nest([sox, meas2])\n",
+    "    ])\n",
+    "])\n",
+    "\n",
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -483,115 +485,6 @@
    "metadata": {},
    "source": [
     "We have woven together a 1D and 2D loop. Notice that we immediately see that \"m\" only depends on y and \"n\" depends on x and y. There is no need to explicitly state this. With will become important when we discuss data sets. The above sweep is equivalent to..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 -0.1\n",
-      "0 0 0.2\n",
-      "0 1 1.2\n",
-      "1 0.9\n",
-      "1 0 2.2\n",
-      "1 1 3.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for y in [0, 1]: \n",
-    "    m = y ** 3 - 0.1\n",
-    "    print(y, m)\n",
-    "    for x in [0, 1]: \n",
-    "        n = x ** 2 + 2 * y + 0.2\n",
-    "        \n",
-    "        print(y, x, n)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note how the above loop is different from... "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y0, m(y0) = -0.1, x0, n(y0,x0) = 0.2\n",
-      "y0, m(y0) = -0.1, x1, n(y0,x1) = 1.2\n",
-      "y1, m(y1) = 0.9, x0, n(y1,x0) = 2.2\n",
-      "y1, m(y1) = 0.9, x1, n(y1,x1) = 3.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = ManualParameter(\"x\")\n",
-    "y = ManualParameter(\"y\")\n",
-    "\n",
-    "m = ManualParameter(\"m\")\n",
-    "m.get = lambda: y() ** 3 - 0.1\n",
-    "mm = ParameterWrapper(m)\n",
-    "\n",
-    "n = ManualParameter(\"n\")\n",
-    "n.get = lambda: x() ** 2 + 2 * y() + 0.2\n",
-    "nn = ParameterWrapper(n)\n",
-    "\n",
-    "sox = ParameterSweep(x, lambda: [0, 1])\n",
-    "soy = ParameterSweep(y, lambda: [0, 1])\n",
-    "\n",
-    "for i in Nest([soy, mm, sox, nn]):  # = y * m * x * n \n",
-    "    pretty_print(i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is equivalent to..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 -0.1 0 0.2\n",
-      "0 -0.1 1 1.2\n",
-      "1 0.9 0 2.2\n",
-      "1 0.9 1 3.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for y in [0, 1]: \n",
-    "    m = y ** 3 - 0.1\n",
-    "    for x in [0, 1]: \n",
-    "        n = x ** 2 + 2 * y + 0.2\n",
-    "        \n",
-    "        print(y, m, x, n)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Thus although the same functions are called at the same time in the sweep, the shape of the output data is different"
    ]
   },
   {
@@ -603,37 +496,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@measurement([(\"meas3\", \"H\")])\n",
     "def measurement_function(): \n",
-    "    value = np.random.normal(0, 1, (3,))\n",
-    "    return {\"measurement\": {\"unit\": \"H\", \"value\": value, \"independent_parameter\": False}}"
+    "    return int(np.random.normal(0, 1) * 10) / 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x0, measurement(x0) = [-1.31800767  0.473498   -1.24730603]\n",
-      "x1, measurement(x1) = [ 0.30383519  0.13854527  0.56536637]\n",
-      "x2, measurement(x2) = [ 0.92044549 -1.79077928  0.02910082]\n",
-      "x3, measurement(x3) = [-0.82430061  1.153619    2.07675759]\n"
+      "x [V] | meas3 [H]\n",
+      " 0\t -0.6\n",
+      " 1\t 0.0\n",
+      " 2\t -0.8\n",
+      " 3\t -0.9\n"
      ]
     }
    ],
    "source": [
-    "x = ManualParameter(\"x\")\n",
-    "y = ManualParameter(\"y\")\n",
+    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
     "\n",
-    "for i in Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)]): \n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer: \n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@measurement([(\"m3\", \"H\"), (\"m4\", \"H\")])\n",
+    "def measurement_function(): \n",
+    "    meas3 = int(np.random.normal(0, 1) * 10) / 10\n",
+    "    meas4 = int(np.random.normal(-5, 1) * 10) / 10\n",
+    "    return meas3, meas4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V] | m4 [H]\tm3 [H]\n",
+      " 0\t -5.9\t -0.6\n",
+      " 1\t -5.8\t 0.9\n",
+      " 2\t -6.7\t -0.5\n",
+      " 3\t -5.1\t 1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_object = Nest([ParameterSweep(x, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
+    "\n",
+    "with Printer(sweep_object) as printer: \n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -645,52 +577,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qcodes.sweep.sweep import parameter_log_format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = ManualParameter(\"z\")\n",
     "t.get = lambda: int(np.random.uniform(0, 100))\n",
     "\n",
-    "def setter(value): \n",
-    "    # Do some measurement right before setting the parameter\n",
-    "    temperature = t()\n",
-    "    \n",
-    "    x.set(value)\n",
-    "    return_value = parameter_log_format(x, value, setting=True)\n",
-    "    \n",
-    "    return_value.update(parameter_log_format(t, temperature, setting=False))\n",
-    "    return return_value"
+    "@setter([(\"xs\", \"V\")])\n",
+    "def setter1(value): \n",
+    "    x.set(2 * value)\n",
+    "    return value "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "z() = 50, x0, measurement(x0) = [-1.1072556   0.19921069 -0.57509861]\n",
-      "z() = 75, x1, measurement(x1) = [-0.72796408 -1.49406078 -1.50131129]\n",
-      "z() = 55, x2, measurement(x2) = [-0.95979363  0.42259293  0.13107023]\n",
-      "z() = 93, x3, measurement(x3) = [-1.07275228 -0.04884078  1.1439181 ]\n"
+      "xs [V] | m4 [H]\tm3 [H]\n",
+      " 0\t -5.5\t 0.5\n",
+      " 1\t -5.2\t 2.1\n",
+      " 2\t -5.7\t 1.0\n",
+      " 3\t -3.0\t -0.2\n"
      ]
     }
    ],
    "source": [
-    "for i in Nest([FunctionSweep(setter, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)]): \n",
-    "    pretty_print(i)"
+    "sweep_object = Nest([FunctionSweep(setter1, lambda: [0, 1, 2, 3]), FunctionWrapper(measurement_function)])\n",
+    "\n",
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@setter([(\"xs\", \"V\"), (\"ys\", \"V\")])\n",
+    "def setter2(xv, yv):\n",
+    "    x.set(xv)\n",
+    "    y.set(yv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xs [V]\tys [V] | m4 [H]\tm3 [H]\n",
+      " 0\t 4\t -5.7\t -0.8\n",
+      " 1\t 5\t -3.1\t 0.9\n",
+      " 2\t 7\t -4.3\t 1.2\n",
+      " 3\t 8\t -5.6\t -1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sweep_object = Nest([\n",
+    "    FunctionSweep(setter2, lambda: zip([0, 1, 2, 3], [4, 5, 7, 8])), \n",
+    "    FunctionWrapper(measurement_function)\n",
+    "])\n",
+    "\n",
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object: \n",
+    "        printer(i)"
    ]
   },
   {
@@ -796,18 +758,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
