--- a/docs/examples/sweep/convenience_functions.ipynb
+++ b/docs/examples/sweep/convenience_functions.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\a-sochat\\AppData\\Local\\Continuum\\Anaconda3\\envs\\qcodes\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import sys \n",
     "sys.path.append(r\"C:\\Users\\a-sochat\\development\\Qcodes_Sohail_Clone\\Qcodes\")\n",
@@ -14,7 +23,7 @@
     "import qcodes as qc\n",
     "from qcodes.instrument.parameter import ManualParameter\n",
     "\n",
-    "from qcodes.sweep import sweep, nest, chain"
+    "from qcodes.sweep import sweep, nest, chain, measurement, setter"
    ]
   },
   {
@@ -23,26 +32,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pretty_print(dictionary): \n",
-    "    \n",
-    "    s = \"\"\n",
-    "    independents = \"\"\n",
-    "    seperator = \"\"\n",
-    "    \n",
-    "    names = list(dictionary.keys())[::-1]\n",
-    "    \n",
-    "    for name in names: \n",
-    "        value = str(dictionary[name][\"value\"])\n",
+    "class Printer:\n",
+    "    def __init__(self, sweep_object): \n",
+    "        self._table_list = sweep_object.parameter_table.table_list\n",
     "        \n",
-    "        if dictionary[name][\"independent_parameter\"]: \n",
-    "            s += seperator + name + value\n",
-    "            independents += seperator + name + value\n",
-    "        else: \n",
-    "            s += seperator + name + \"({}) = {}\".format(independents, value) \n",
+    "        self._ind = set([tpl for d in self._table_list for tpl in d[\"independent_parameters\"]])\n",
+    "        self._dep = set([tpl for d in self._table_list for tpl in d[\"dependent_parameters\"]])\n",
     "        \n",
-    "        seperator = \", \"\n",
+    "        ind_names = list(zip(*self._ind))[0] if len(self._ind) else []\n",
+    "        dep_names = list(zip(*self._dep))[0] if len(self._dep) else []\n",
+    "        \n",
+    "        self._all_param_names = np.append(ind_names, dep_names)\n",
+    "        \n",
+    "    def __enter__(self): \n",
+    "        header_ind = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._ind])\n",
+    "        header_dep = \"\\t\".join([\"{} [{}]\".format(*i) for i in self._dep])\n",
+    "        sep = \" | \"\n",
+    "        print((header_ind + sep + header_dep).strip(sep))\n",
+    "        \n",
+    "        return self\n",
     "    \n",
-    "    print(s)"
+    "    def __exit__(self, type, value, traceback): \n",
+    "        pass\n",
+    "\n",
+    "    def __call__(self, result):\n",
+    "        print(\" \" + \"\\t \".join(list([str(result.get(ip, \"None\")) for ip in self._all_param_names])))"
    ]
   },
   {
@@ -51,17 +65,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = ManualParameter(\"x\")\n",
-    "y = ManualParameter(\"y\")\n",
+    "x = ManualParameter(\"x\", unit=\"V\")\n",
+    "y = ManualParameter(\"y\", unit=\"V\")\n",
     "\n",
-    "sox = sweep(x, [0, 1])  # Notice we do not have to use lambda functions in the sweep\n",
-    "soy = sweep(y, [0, 1])\n",
+    "m = ManualParameter(\"m\", unit=\"A\")\n",
+    "m.get = lambda: x() ** 2\n",
     "\n",
-    "m = ManualParameter(\"m\")\n",
-    "m.get =  lambda: y() ** 3 - 0.1\n",
+    "n = ManualParameter(\"n\", unit=\"A\")\n",
+    "n.get = lambda: x() - y() ** 2 + 16\n",
     "\n",
-    "n = ManualParameter(\"n\")\n",
-    "n.get = lambda: x() ** 2 + 2 * y() + 0.2"
+    "sweep_object = sweep(x, [0, 1, 2])(\n",
+    "    m,\n",
+    "    sweep(y, [0, 1, 2])(\n",
+    "        n  \n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -73,18 +91,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y0, m(y0) = -0.1\n",
-      "y0, x0, n(y0, x0) = 0.2\n",
-      "y0, x1, n(y0, x1) = 1.2\n",
-      "y1, m(y1) = 0.9\n",
-      "y1, x0, n(y1, x0) = 2.2\n",
-      "y1, x1, n(y1, x1) = 3.2\n"
+      "x [V]\ty [V] | m [A]\tn [A]\n",
+      " 0\t None\t 0\t None\n",
+      " 0\t 0\t None\t 16\n",
+      " 0\t 1\t None\t 15\n",
+      " 0\t 2\t None\t 12\n",
+      " 1\t None\t 1\t None\n",
+      " 1\t 0\t None\t 17\n",
+      " 1\t 1\t None\t 16\n",
+      " 1\t 2\t None\t 13\n",
+      " 2\t None\t 4\t None\n",
+      " 2\t 0\t None\t 18\n",
+      " 2\t 1\t None\t 17\n",
+      " 2\t 2\t None\t 14\n"
      ]
     }
    ],
    "source": [
-    "for i in nest(soy, chain(m, nest(sox, n))):   # We do not have to wrap parameters\n",
-    "    pretty_print(i)"
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object:   \n",
+    "        printer(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@measurement([(\"m3\", \"H\"), (\"m4\", \"H\")])\n",
+    "def measurement_function(): \n",
+    "    meas3 = int(np.random.normal(0, 1) * 10) / 10\n",
+    "    meas4 = int(np.random.normal(-5, 1) * 10) / 10\n",
+    "    return meas3, meas4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_object = sweep(x, [0, 1, 2])(\n",
+    "    m,\n",
+    "    sweep(y, [0, 1, 2])(\n",
+    "        measurement_function  \n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x [V]\ty [V] | m [A]\tm4 [H]\tm3 [H]\n",
+      " 0\t None\t 0\t None\t None\n",
+      " 0\t 0\t None\t -4.2\t 0.4\n",
+      " 0\t 1\t None\t -4.7\t -0.5\n",
+      " 0\t 2\t None\t -4.4\t -1.8\n",
+      " 1\t None\t 1\t None\t None\n",
+      " 1\t 0\t None\t -4.5\t -0.1\n",
+      " 1\t 1\t None\t -3.9\t 1.3\n",
+      " 1\t 2\t None\t -3.8\t -0.4\n",
+      " 2\t None\t 4\t None\t None\n",
+      " 2\t 0\t None\t -4.0\t 0.5\n",
+      " 2\t 1\t None\t -6.8\t -0.4\n",
+      " 2\t 2\t None\t -2.6\t 0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Printer(sweep_object) as printer:\n",
+    "    for i in sweep_object:   \n",
+    "        printer(i)"
    ]
   },
   {
